fix: fixed the service class, and the service test class